[WTR] Visited link tracking is not disabled properly https://bugs.webkit.org/show_bug.cgi?id=76699

Reviewed by Jocelyn Turcotte.

Source/WebKit2:

If PLATFORM_STRATEGIES is enabled visited link tracking is done through
VisitedLinkProvider and not through PageGroup.
InjectedBundle sets the shouldTrackVisitedLinks flag on the PageGroup,
thus the shared VisitedLinkTable does get populated with visited links
regardless of the flag.

The WebProcess should only track visited links if tracking is specifically
enabled for a test through WTR's LayoutTestController.

This patch fixes several flacky and failing layout tests on Qt-WK2.

* WebProcess/InjectedBundle/InjectedBundle.cpp:
(WebKit::InjectedBundle::setShouldTrackVisitedLinks): Let the WebProcess
know about visited link tracking.
* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::WebProcess):
(WebKit::WebProcess::setShouldTrackVisitedLinks):
(WebKit::WebProcess::addVisitedLink):
* WebProcess/WebProcess.h:
(WebProcess):

LayoutTests:

* platform/qt-5.0-wk2/Skipped: Unskip passing tests.

Canonical link: https://commits.webkit.org/104180@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117248 268f45cc-cd09-0410-ab3c-d52691b4dbfc